// Vitest Snapshot v1

exports[`components/tsCounter.vue > 初期表示 > snapshot 1`] = `
<div
  class="ts-counter"
  data-v-777cbfe6=""
>
  <button
    data-v-777cbfe6=""
  >
    -
  </button>
   2 
  <button
    data-v-777cbfe6=""
  >
    +
  </button>
</div>
`;

exports[`components/tsCounter.vue 初期表示 snapshot 1`] = `
<div
  class="ts-counter"
>
  <button>
    -
  </button>
   2 
  <button>
    +
  </button>
</div>
`;
